--- a/proyecto-final-frontend/src/app/login/login.page.html
+++ b/proyecto-final-frontend/src/app/login/login.page.html
@@ -76,7 +76,7 @@
       <div class="content">
         <h3> ¿Ya tienes cuenta? </h3>
         <br>
-        <button class="btn transparent" (click)="signIn()" id="sign-in-btn">Registro</button>
+        <button class="btn transparent" (click)="signIn()" id="sign-in-btn">Iniciar sesión</button>
       </div>
       <img src="assets/register.svg" class="image">
     </div>
