--- a/proyecto-final-frontend/src/app/inicio/user/new-user/new-user.page.html
+++ b/proyecto-final-frontend/src/app/inicio/user/new-user/new-user.page.html
@@ -11,54 +11,46 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Registrar usuario</ion-card-title>
-    </ion-card-header>
+  <ion-card class="ion-padding">
     <ion-card-content>
-      <form [formGroup]="formRegister">        
-        <ion-item>
-          <ion-label>Tipo de identificación</ion-label>
-          <ion-select formControlName="idType" interface="popover">
+      <form [formGroup]="formRegister">
+        <div class="input-field">
+          <i class="fas fa-address-card"></i>
+          <ion-select formControlName="idType" interface="popover" placeholder="Tipo de identificación">
             <ion-select-option value="CC">CC</ion-select-option>
             <ion-select-option value="CE">CE</ion-select-option>
           </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Número de identificación</ion-label>
-          <ion-input type="number" formControlName="idNumber"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Apellidos</ion-label>
-          <ion-input formControlName="lastName"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Nombre</ion-label>
-          <ion-input formControlName="firstName"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Correo electrónico</ion-label>
-          <ion-input type="email" formControlName="email"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Fecha de nacimiento</ion-label>
-          <ion-input type="date" formControlName="bornDate"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input type="password" formControlName="password"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Confirmar contraseña</ion-label>
-          <ion-input type="password" formControlName="confirmPassword" autocomplete="off"></ion-input>
-        </ion-item>
+        </div>
+        <div class="input-field">
+          <i class="fas fa-address-card"></i>
+          <input formControlName="idNumber" type="number" placeholder="Número de identificación">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-user"></i>
+          <input formControlName="lastName" type="text" placeholder="Apellidos">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-user"></i>
+          <input formControlName="firstName" type="text" placeholder="Nombres">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-envelope"></i>
+          <input formControlName="email" type="email" type="text" placeholder="Correo electrónico">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-calendar"></i>
+          <input formControlName="bornDate" type="date" placeholder="Fecha de nacimiento">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input formControlName="password" type="password" placeholder="Contraseña">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input formControlName="confirmPassword" type="password" placeholder="Confirmar contraseña">
+        </div>
+        <input (click)="register()" type="submit" value="Registrar" class="btn solid">
       </form>
-      <br>
-      <ion-item>
-        <ion-button slot="end" (click)="register()" size="medium">
-          Registrar
-        </ion-button>
-      </ion-item>
     </ion-card-content>
   </ion-card>
 </ion-content>
