--- a/proyecto-final-frontend/src/global.scss
+++ b/proyecto-final-frontend/src/global.scss
@@ -88,3 +88,100 @@ form {
 .btn:hover {
     background-color: #348a2c;
 }
+
+.card {
+    color: var(--ion-text-color);
+}
+
+.card p{
+    font-size: 1rem;
+}
+
+.card:nth-child(2) {
+    grid-column: 1 / 3;
+}
+
+.card.title{
+    margin-left: 5px;
+}
+
+.card.body{
+    margin-left: 20px;
+}
+
+.card.end{
+    margin-right: 20px;
+    text-align: right;
+}
+
+.card-container {
+    padding: 20px;
+    display: grid;
+}
+
+.card-btn {
+    height: 50px;
+    outline: none;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600px;
+    margin: 20px 10px;
+}
+
+.card-btn.green{
+    background-color: var(--ion-color-success);
+}
+
+.card-btn.green:hover {
+    background-color: var(--ion-color-success-shade);
+}
+
+.card-btn.yellow{
+    background-color: var(--ion-color-warning);
+}
+
+.card-btn.yellow:hover {
+    background-color: var(--ion-color-warning-shade);
+}
+
+.card-btn.red{
+    background-color: var(--ion-color-danger);
+}
+
+.card-btn.red:hover {
+    background-color: var(--ion-color-danger-shade);
+}
+
+.accordion {
+    width: 100%;
+    text-align: left;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.active,
+.accordion:hover {
+    background-color: var(--ion-color-light-shade);
+}
+
+.accordion-content {
+    display: grid;
+    padding: 0 20px;
+    background-color: var(--ion-color-light);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.danger{
+    color: var(--ion-color-danger);
+}
+
+.success{
+    color: var(--ion-color-success);
+}
